// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`errors > .errors.formErrorText > calls solution if a function 1`] = `
"description

a solution

----------

Platform: test platform-x64 (Foo - OsVersion)
Cypress Version: 1.2.3"
`;

exports[`errors > .errors.formErrorText > forms full text for invalid display error 1`] = `
"Cypress verification failed.

Cypress failed to start after spawning a new Xvfb server.

The error logs we received were:

----------

current message

----------

This may be due to a missing library or dependency. https://on.cypress.io/required-dependencies

Please refer to the error above for more detail.

----------

Platform: test platform-x64 (Foo - OsVersion)
Cypress Version: 1.2.3"
`;

exports[`errors > .errors.formErrorText > returns fully formed text message 1`] = `
"Your system is missing the dependency: Xvfb

Install Xvfb and run Cypress again.

Read our documentation on dependencies for more information:

https://on.cypress.io/required-dependencies

If you are using Docker, we provide containers with all required dependencies installed.

----------

Platform: test platform-x64 (Foo - OsVersion)
Cypress Version: 1.2.3"
`;

exports[`errors > getError > forms full message and creates Error object 1`] = `
{
  "description": "The Test Runner unexpectedly exited via a exit event with signal SIGKILL",
  "solution": "Please search Cypress documentation for possible solutions:

  https://on.cypress.io

Check if there is a GitHub issue describing this crash:

  https://github.com/cypress-io/cypress/issues

Consider opening a new issue.",
}
`;

exports[`errors > getError > forms full message and creates Error object 2`] = `
"The Test Runner unexpectedly exited via a exit event with signal SIGKILL

Please search Cypress documentation for possible solutions:

https://on.cypress.io

Check if there is a GitHub issue describing this crash:

https://github.com/cypress-io/cypress/issues

Consider opening a new issue.

----------

Platform: test platform-x64 (Foo - OsVersion)
Cypress Version: 1.2.3"
`;

exports[`errors > individual > has the following errors 1`] = `
[
  "CYPRESS_RUN_BINARY",
  "binaryNotExecutable",
  "childProcessKilled",
  "failedDownload",
  "failedUnzip",
  "failedUnzipWindowsMaxPathLength",
  "incompatibleHeadlessFlags",
  "incompatibleTestTypeFlags",
  "incompatibleTestingTypeAndFlag",
  "invalidCacheDirectory",
  "invalidConfigFile",
  "invalidCypressEnv",
  "invalidOS",
  "invalidRunProjectPath",
  "invalidSmokeTestDisplayError",
  "invalidTestingType",
  "missingApp",
  "missingDependency",
  "missingXvfb",
  "nonZeroExitCodeXvfb",
  "notInstalledCI",
  "smokeTestFailure",
  "unexpected",
  "unknownError",
  "versionMismatch",
]
`;
